# hydro-serving-python

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  jenkinsfile.groovy  pyproject.toml  requirements.txt  start.sh  version
.github/workflows/: ci.yaml  release.yaml
src/: PythonRuntime.py  PythonRuntimeService.py  grpc_server.py  grpc_service.py  main.py  prediction_service.py  runtime.py
test/: test.py  test_fail_case.py  test_success_case.py
test/models/calculator/: contract.protobin
test/models/calculator/files/src/: func_main.py
test/models/calculator/src/: func_main.py
test/models/crashing_calculator/: contract.protobin
test/models/crashing_calculator/files/src/: func_main.py
