[tool.poetry]
name = "hydro-serving-python"
version = "3.0.0-dev3"
description = "Python runtime for Hydrosphere Serving. Provides a GRPC API for Python scripts."
authors = ["hydrosphere.io"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "~1.28.1"
grpcio-health-checking="~1.28.1"
docker = "~4.2.0"
hydrosdk = "3.0.0-dev2"
pandas = "~1.0.3"
numpy = "~1.18.3"

[tool.poetry.dev-dependencies]
pytest="~5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
